# web-api-django

./: .gitignore  Makefile  README.md  pyproject.toml
.run/: localhost (asgi).run.xml  localhost (wsgi).run.xml  localhost.run.xml
api/: auth.py  urls.py
api/v1/: tv_show_view.py  urls.py  widget_view.py
api/v2/: tv_show_view.py  urls.py  widget_view.py
common_libs/: logging.py
core/: models.py
core/clients/sample_api/: futurama_client.py  futurama_dtos.py
core/dtos/: tv_show_dtos.py
core/migrations/: 0001_initial.py
core/services/: tv_show_service.py
web_api/: asgi.py  settings.py  urls.py  wsgi.py
