[tool.poetry]
name = "web-api-django"
version = "0.2.0"
description = "a github repo template for creating a web api using django"
authors = ["Khai Nguyen <1192669+khaister@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
black = "^24.3.0"
django = "^5.0.11"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.2"
httpx = "^0.27.0"
pydantic = "^2.6.4"
python = "^3.12"
rich = "^13.7.1"

[tool.black]
line-length = 120
exclude = "/common_libs/logging.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
